[gd_scene load_steps=12 format=3 uid="uid://dsg7ev0kvghnj"]

[ext_resource type="Script" uid="uid://ddhiggea75olg" path="res://scripts/signup.gd" id="1_gxvn0"]
[ext_resource type="Material" uid="uid://crjr13k12egng" path="res://scenes/splash.tres" id="2_7cl1p"]
[ext_resource type="Texture2D" uid="uid://kdt71jk5swyh" path="res://game_assets/icons/user.png" id="3_p34bx"]
[ext_resource type="Theme" uid="uid://cx365ld2mgjne" path="res://resources/theme_base.tres" id="4_j6mp4"]
[ext_resource type="Theme" uid="uid://74kwx22ikciq" path="res://resources/theme_headers.tres" id="5_8bdyc"]
[ext_resource type="FontFile" uid="uid://d0xcffxoyd14k" path="res://game_assets/fonts/JetBrainsMono-VariableFont_wght.ttf" id="6_p0ln1"]
[ext_resource type="Script" uid="uid://dog0wpjftm7uk" path="res://scripts/validate_line.gd" id="7_ertm5"]
[ext_resource type="PackedScene" uid="uid://wd63efdi6bdn" path="res://scenes/BaseBComponent.tscn" id="8_n4qn0"]
[ext_resource type="Script" uid="uid://dx40hpbce8w60" path="res://scripts/button_config.gd" id="9_87yak"]
[ext_resource type="Script" uid="uid://cink4uduoxu4b" path="res://scripts/end.gd" id="10_o15mk"]

[sub_resource type="Resource" id="Resource_3idxy"]
script = ExtResource("9_87yak")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.3
_hover_scale = 1.05
press_color = Color(0.72, 0.72, 0.72, 1)
_press_scale = 0.98
animation_scale = 19.697
animation_speed = 3.473
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[node name="Node2D" type="Control" node_paths=PackedStringArray("accept", "first_line")]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gxvn0")
typename = "signup"
accept = NodePath("ColorRect/train")
first_line = NodePath("ColorRect/Label")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 8
material = ExtResource("2_7cl1p")
instance_shader_parameters/corner_radius_width_add = Vector2(9.365, 1)
instance_shader_parameters/outline_color = Color(0.85, 0.85, 0.85, 1)
instance_shader_parameters/tuning = Color(0, 0, 0, 0.7529412)
layout_mode = 0
offset_left = 365.0
offset_top = 146.0
offset_right = 644.0
offset_bottom = 407.0

[node name="root" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="i" type="Sprite2D" parent="ColorRect/root"]
position = Vector2(23.000015, 21)
scale = Vector2(0.9496938, 0.9496938)
texture = ExtResource("3_p34bx")

[node name="Label" type="Label" parent="ColorRect/root"]
modulate = Color(0.41, 0.41, 0.41, 1)
z_index = 1
layout_mode = 0
offset_left = 36.0
offset_top = 9.0
offset_right = 140.84766
offset_bottom = 52.0
scale = Vector2(0.600218, 0.600218)
theme = ExtResource("4_j6mp4")
text = "/signup"

[node name="Label" type="LineEdit" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.5
offset_top = 48.0
offset_right = 130.5
offset_bottom = 91.0
grow_horizontal = 2
scale = Vector2(0.92970926, 0.92970926)
theme = ExtResource("5_8bdyc")
theme_override_fonts/font = ExtResource("6_p0ln1")
placeholder_text = "name"
max_length = 32
expand_to_text_length = true
script = ExtResource("7_ertm5")
resize_after = 250
monospaced = false
metadata/_custom_type_script = "uid://dog0wpjftm7uk"

[node name="Label2" type="LineEdit" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.5
offset_top = 103.999985
offset_right = 130.5
offset_bottom = 147.0
grow_horizontal = 2
scale = Vector2(0.92970926, 0.92970926)
theme = ExtResource("5_8bdyc")
theme_override_fonts/font = ExtResource("6_p0ln1")
placeholder_text = "pass"
max_length = 32
expand_to_text_length = true
script = ExtResource("7_ertm5")
resize_after = 250
auto_red = true
monospaced = false
metadata/_custom_type_script = "uid://dog0wpjftm7uk"

[node name="train" parent="ColorRect" instance=ExtResource("8_n4qn0")]
instance_shader_parameters/corner_radius_width_add = Vector2(-9, 0)
instance_shader_parameters/extents = Vector2(0, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -93.51219
offset_top = -43.99997
offset_right = -25.544266
offset_bottom = -18.99997
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.1770253, 1.1770253)
pivot_offset = Vector2(33.983963, 12.5)
mouse_filter = 1
color = Color(0.6045, 0.93, 0.631625, 1)
button_type = 1
top = true
hint = &"login"
base_scale_x = 0.45
resize_after = 6
text = "Signup"
base_size = Vector2(67.967926, 25)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_3idxy")
in_splash = true

[node name="train2" parent="ColorRect" instance=ExtResource("8_n4qn0")]
instance_shader_parameters/corner_radius_width_add = Vector2(-9, 0)
instance_shader_parameters/extents = Vector2(0, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -43.999985
offset_right = -101.422455
offset_bottom = -18.999985
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.954273, 0.954273)
pivot_offset = Vector2(39.288773, 12.5)
mouse_filter = 1
color = Color(0.6045, 0.93, 0.631625, 0)
button_type = 1
top = true
hint = &"login"
base_scale_x = 0.45
resize_after = 9
text = "Login"
base_size = Vector2(78.577545, 25)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_3idxy")
in_splash = true

[node name="Label3" type="LineEdit" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.5
offset_top = 159.00002
offset_right = 130.5
offset_bottom = 202.00003
grow_horizontal = 2
scale = Vector2(0.92970926, 0.92970926)
theme = ExtResource("5_8bdyc")
theme_override_fonts/font = ExtResource("6_p0ln1")
placeholder_text = "repeat pass"
max_length = 32
expand_to_text_length = true
script = ExtResource("7_ertm5")
resize_after = 250
auto_red = true
monospaced = false
metadata/_custom_type_script = "uid://dog0wpjftm7uk"

[node name="Node" type="Node" parent="."]
script = ExtResource("10_o15mk")

[connection signal="text_changed" from="ColorRect/Label2" to="." method="_on_label_2_text_changed"]
[connection signal="released" from="ColorRect/train" to="." method="_on_train_releasedd"]
[connection signal="released" from="ColorRect/train2" to="." method="_on_train_2_releaseda"]
